test/error/LexInvalidDollar.ci
$foo //ERROR: Expected interpolated string
